<?xml version="1.0" encoding="utf-8"?>
<fragment xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/recipe_detail_fragment"
    android:name="com.example.hmod_.bakingapp.Fragment.DetailsFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

</fragment>